# pulumi-hcloud-upload-image

./: .gitignore  .golangci.yml  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  golangci-lint.mod  golangci-lint.sum  main.go
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
pkg/hcloudimages/: hcloudimages.go
sdk/dotnet/: HcloudUploadImage.HcloudUploadImage.csproj  Provider.cs  Utilities.cs  Yournamespace.HcloudUploadImage.csproj  pulumi-plugin.json
sdk/dotnet/Config/: Config.cs
sdk/dotnet/Hcloudimages/: UploadedImage.cs
sdk/go/pulumi-hcloud-upload-image/: doc.go  init.go  provider.go  pulumi-plugin.json
sdk/go/pulumi-hcloud-upload-image/config/: config.go
sdk/go/pulumi-hcloud-upload-image/hcloudimages/: init.go  uploadedImage.go
sdk/go/yourdisplayname/: doc.go  init.go  provider.go
sdk/java/: README.md  build.gradle  settings.gradle
sdk/nodejs/: index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/nodejs/config/: vars.ts
sdk/nodejs/hcloudimages/: index.ts  uploadedImage.ts
sdk/python/: pyproject.toml
sdk/python/hcloud_upload_image_hcloud_upload_image/: __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/hcloud_upload_image_hcloud_upload_image/config/: __init__.pyi  vars.py
sdk/python/hcloud_upload_image_hcloud_upload_image/hcloudimages/: __init__.py  uploaded_image.py
sdk/python/yournamespace_hcloud_upload_image/: __init__.py  pulumi-plugin.json
sdk/python/yournamespace_hcloud_upload_image/hcloudimages/: __init__.py  uploaded_image.py
(+16 files in other folders)
